--- a/styles.css
+++ b/styles.css
@@ -276,7 +276,9 @@ a:hover{
 }
 
 /*NFT*/
-
+hr{
+    border-bottom: 0px solid #00FFF7;
+}
 .nftBody{
     background-color: #0D192B;
     display: flex;
@@ -368,4 +370,72 @@ a:hover{
     color: #00FFF7;
     font-size: 18px;
 }
+
+/*Cartas Poke*/
+
+.pokeBody{
+    background-color: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+}
+
+.pokeTable{
+
+}
+
+.pokeRow{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.pokeCol{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.pokeCard{
+    width:  200px;
+    height: 200px;
+    display: flex;
+    align-items: baseline;
+    border-radius: 30px;
+    background-color: rgb(220,220,220);
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+
+.poke_bg{
+    height: 100px;
+    width: 100px;
+    border: 1px solid black;
+    border-radius: 50%;
+    background-color: rgb(227,236,230);
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+.poke_name{
+    font-size: 30px;
+}
+
+.poke_data{
+    flex-direction: column;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    gap: 10px; 
+}
+
+.poke_type{
+    color: gray;
+}
+
+.poke_bg img{
+    width: 100%;
+    z-index: 4;
+}
+
 /*CSS INDEX*/
