--- a/googleClon/styles/gooStyles.css
+++ b/googleClon/styles/gooStyles.css
@@ -56,12 +56,16 @@
 }
 
 .flexColFoo{
-    margin: 0%;
+    margin: .5%;
     display: flex;
     flex-direction: column;
     background-color: #f8f8f8;
     column-gap: 30px;
     margin-top: 300px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .flexRow{
