--- a/googleClon/styles/gooStyles.css
+++ b/googleClon/styles/gooStyles.css
@@ -2,8 +2,11 @@
 .bodyCss{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
+    
 }
-
+.navBarPro a,.flexColSear div p a, .flexRowFoo div a{
+    text-decoration:none;
+}
 .navBar{
     display: flex;
     flex-direction: row;
